--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,33 @@ repositories {
 }
 
 dependencies {
+
+	//Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	//Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	//Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.3'
+
+	//Data-JPA
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.3.3"
+
+	//MapStruct
+	implementation 'org.mapstruct:mapstruct:1.6.0'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0'
+
+	//MySQLConnector
+	implementation 'com.mysql:mysql-connector-j:9.0.0'
+
+	//OpenApi
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+	//Mockito
+	testImplementation 'org.mockito:mockito-core:5.12.0'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
