--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=emazon-stock
+
+#DbConnection
+spring.datasource.url=jdbc:mysql://localhost:3306/emazon_stock
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#OpenApi
+appDescription="Emazon Stock"
+appVersion="1.0.0"
+
+#VersioningConvention
+server.servlet.context.path=/emazon/api/v1
