- Testing Implementation - Exceptions moved to Domain - New Business rule at domain - Jacoco implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ appDescription="Emazon Stock"
 appVersion="1.0.0"
 
 #VersioningConvention
-server.servlet.context.path=/emazon/api/v1
+server.servlet.context-path=/emazon/api/v1
