--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,10 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 
 	//Validation
-	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.3'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	//Data-JPA
-	implementation "org.springframework.boot:spring-boot-starter-data-jpa:3.3.3"
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	//MapStruct
 	implementation 'org.mapstruct:mapstruct:1.6.0'
@@ -54,6 +54,12 @@ dependencies {
 
 	//Mockito
 	testImplementation 'org.mockito:mockito-core:5.12.0'
+
+	//Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//JWT
+	implementation 'com.auth0:java-jwt:4.4.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
