--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,12 @@ dependencies {
 	//JWT
 	implementation 'com.auth0:java-jwt:4.4.0'
 
+	// Feign
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
+
+	// Apache Client
+	implementation 'io.github.openfeign:feign-httpclient:13.3'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
